--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
+    {% for block in page.blocks %}
+    <!-- {{block.id}} -->
+    <div class="scheme-{{block.scheme}}">
+        {% include /blocks/{{block.id}}.html %}
+    </div>
+    {% endfor%}
+
     {{content}}
+
 </body>
 
 </html>
