ticker banner created

--- a/_includes/blocks/rich-text.html
+++ b/_includes/blocks/rich-text.html
@@ -1,7 +1,7 @@
 <section id="section-{{forloop.index}}">
   <div class="max-width mx-auto">
     <div class="flex content-mover">
-      <div class="content-block">{{block.text_html}}</div>
+      <div class="content-block">{{block.text-html}}</div>
     </div>
   </div>
 </section>
