working on accordion + a few smaller tweaks to rich-text and ticker-banner

--- a/_includes/blocks/rich-text.html
+++ b/_includes/blocks/rich-text.html
@@ -16,7 +16,7 @@
 
 #section-{{forloop.index}} .content-block {
   width: {{block.width}};
-  text-align: {{block.text-alignment}}
+  text-align: {{block.text-alignment}};
 }
 </style>
 
@@ -25,7 +25,7 @@
 
 <!-- FRONT MATTER REFERENCE -->
 - id: rich-text
-  text_html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
+  text-html: Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deserunt, doloribus incidunt beatae id distinctio consectetur aut fugiat magnam, nam maiores exercitationem reiciendis molestiae tempora quaerat cumque itaque possimus dolore?
   height: 95vh
   width: 33%
   horizontal-placement: center
