--- a/_includes/blocks/ticker-banner.html
+++ b/_includes/blocks/ticker-banner.html
@@ -108,3 +108,22 @@ tickerBanners.forEach(banner => {
 })
 
 </script>
+
+
+{% comment %}
+
+<!-- FRONT MATTER REFERENCE -->
+- id: ticker-banner
+  banner-style:
+    direction: English
+    speed: 50
+    text-size:
+  banner-message:
+  - text: Lorem ipsum dolor sit!
+    url:
+  - text: Doloribus incidunt beatae!
+    url:
+  - text: Dexercitationem reiciendis!
+    url:
+
+{% endcomment %}
