--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
-/* * {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-} */
+}
 /* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* Custom CSS */
+
 
 section {
     padding: 5%;
