--- a/_includes/blocks/accordion.html
+++ b/_includes/blocks/accordion.html
@@ -9,9 +9,9 @@
       <div class="p-5">
         <h3 class="relative text-bold">
           {{faq.question}}
-          <div class="absolute faq-icon w-4 h-4 top-0 right-0">
-            <span class="block border-b border-black w-4"></span>
-            <span class="block border-b border-black w-4 transition-all duration-1000 ease-out rotate-90"></span>
+          <div class="absolute faq-icon w-3 h-4 top-0 right-0">
+            <span class="block border-b-2 border-black w-3 leading-none"></span>
+            <span class="block border-b-2 border-black relative top-[-1.4px] w-3 leading-none transition-all duration-1000 ease-out rotate-90"></span>
           </div>
         </h3>
       </div>
