--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,9 +452,30 @@ video {
 .top-0 {
     top: 0px;
 }
+.top-\[1\.4px\] {
+    top: 1.4px;
+}
+.top-\[-1\.4px\] {
+    top: -1.4px;
+}
 .mx-auto {
     margin-left: auto;
     margin-right: auto;
+}
+.mr-1 {
+    margin-right: 0.25rem;
+}
+.ml-2 {
+    margin-left: 0.5rem;
+}
+.ml-1 {
+    margin-left: 0.25rem;
+}
+.ml-\[\.1rem\] {
+    margin-left: .1rem;
+}
+.ml-\[0\.1rem\] {
+    margin-left: 0.1rem;
 }
 .block {
     display: block;
@@ -483,6 +504,15 @@ video {
 .w-3 {
     width: 0.75rem;
 }
+.w-2 {
+    width: 0.5rem;
+}
+.w-\[\.8rem\] {
+    width: .8rem;
+}
+.w-\[0\.8rem\] {
+    width: 0.8rem;
+}
 .flex-shrink {
     flex-shrink: 1;
 }
@@ -492,6 +522,12 @@ video {
 }
 .transform {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.items-center {
+    align-items: center;
+}
+.justify-center {
+    justify-content: center;
 }
 .overflow-hidden {
     overflow: hidden;
@@ -511,6 +547,9 @@ video {
 }
 .border-b {
     border-bottom-width: 1px;
+}
+.border-b-2 {
+    border-bottom-width: 2px;
 }
 .border-black {
     --tw-border-opacity: 1;
@@ -540,6 +579,9 @@ video {
 }
 .pb-5 {
     padding-bottom: 1.25rem;
+}
+.leading-none {
+    line-height: 1;
 }
 .transition-all {
     transition-property: all;
