--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -483,6 +483,9 @@ video {
 .flex {
     display: flex;
 }
+.grid {
+    display: grid;
+}
 .hidden {
     display: none;
 }
@@ -523,11 +526,17 @@ video {
 .transform {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .items-center {
     align-items: center;
 }
 .justify-center {
     justify-content: center;
+}
+.gap-4 {
+    gap: 1rem;
 }
 .overflow-hidden {
     overflow: hidden;
@@ -582,6 +591,9 @@ video {
 }
 .leading-none {
     line-height: 1;
+}
+.filter {
+    filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition-all {
     transition-property: all;
