--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,6 +529,9 @@ video {
 .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+.grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+}
 .items-center {
     align-items: center;
 }
