--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,6 +111,8 @@ gridItems.forEach(image => {
         console.log('some of the button are active')
         filterButtons[0].classList.remove('active')
 // and - any menu item that has all of our active buttons
+
+
 // gridItems.forEach(image => {
 //     image.classList.remove('hidden')
 // })
@@ -130,7 +132,7 @@ gridItems.forEach(image => {
 //     })
 // }});
 
-
+//  end and
 
 
 // or - if it contwainws any of the filters, the menu item will appear
@@ -153,7 +155,8 @@ filterButtons.forEach(button => {
 
     })
 }});
-
+ 
+// end of or
 
 
     } else {
