starting the Cloud Cannon Config

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,7 +135,7 @@ gridItems.forEach(image => {
 //  end and
 
 
-// or - if it contwainws any of the filters, the menu item will appear
+// or - if it contains any of the filters, the menu item will appear
 
 gridItems.forEach(image => {
     image.classList.add('hidden')
@@ -165,7 +165,6 @@ filterButtons.forEach(button => {
     image.classList.remove('hidden')
 })
     }
-    console.log('dan was here')
 }
 }
 
