--- a/_includes/blocks/multi-select-filter.html
+++ b/_includes/blocks/multi-select-filter.html
@@ -12,7 +12,11 @@
     <!-- Things we're filtering -->
     <div class="grid grid-cols-4 gap-4">
     {% for grid-item in block.grid %}
-    <div class="grid-items All {{grid-item.filter replace:' ','-'}}">
+    <div class="grid-items All 
+      {% for filter-name in grid-item.filter %}
+        {{filter-name}} 
+      {% endfor %}
+       ">
       <div>
         <span>{{grid-item.dish-name}} 
           {% if grid-item.filter contains 'Pescatarian' %} <i class="fa-solid fa-fish"></i> {% endif %} 
