--- a/style.css
+++ b/style.css
@@ -10,11 +10,24 @@
 
 /* Custom CSS */
 
-
 section {
     padding: 5%;
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 .max-width {
     max-width: 1000px;
+}
+
+/* Button Classes */
+
+.button {
+    border: 1px solid var(--featured-color);
+    color: var(--featured-color);
+}
+
+.button-featured {
+    background-color: var(--featured-color);
+    color: var(--bg-color);
 }
