--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,6 +499,9 @@ video {
 .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.justify-between {
+    justify-content: space-between;
+}
 .gap-2 {
     gap: 0.5rem;
 }
@@ -531,6 +534,9 @@ video {
 .p-5 {
     padding: 1.25rem;
 }
+.p-4 {
+    padding: 1rem;
+}
 .px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -538,6 +544,10 @@ video {
 .px-5 {
     padding-left: 1.25rem;
     padding-right: 1.25rem;
+}
+.px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 .pb-5 {
     padding-bottom: 1.25rem;
