--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,9 +455,41 @@ video {
 .top-\[-1\.4px\] {
     top: -1.4px;
 }
+.left-0 {
+    left: 0px;
+}
+.top-4 {
+    top: 1rem;
+}
+.top-6 {
+    top: 1.5rem;
+}
+.top-10 {
+    top: 2.5rem;
+}
+.top-14 {
+    top: 3.5rem;
+}
+.top-8 {
+    top: 2rem;
+}
+.z-10 {
+    z-index: 10;
+}
+.z-20 {
+    z-index: 20;
+}
 .mx-auto {
     margin-left: auto;
     margin-right: auto;
+}
+.my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+.my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .block {
     display: block;
@@ -527,6 +559,12 @@ video {
     --tw-border-opacity: 1;
     border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
+.bg-\[var\(--featured-color\)\] {
+    background-color: var(--featured-color);
+}
+.bg-\[var\(--bg-color\)\] {
+    background-color: var(--bg-color);
+}
 .object-cover {
     -o-object-fit: cover;
        object-fit: cover;
@@ -536,6 +574,9 @@ video {
 }
 .p-4 {
     padding: 1rem;
+}
+.p-2 {
+    padding: 0.5rem;
 }
 .px-0 {
     padding-left: 0px;
@@ -551,6 +592,12 @@ video {
 }
 .pb-5 {
     padding-bottom: 1.25rem;
+}
+.pt-4 {
+    padding-top: 1rem;
+}
+.pt-2 {
+    padding-top: 0.5rem;
 }
 .leading-none {
     line-height: 1;
@@ -605,6 +652,14 @@ input, textarea {
 
 input:focus, textarea:focus {
     background-color: var(--featured-color);
+}
+
+.hover\:block:hover {
+    display: block;
+}
+
+.group:hover .group-hover\:block {
+    display: block;
 }
 
 @media (min-width: 768px) {
