navigation links, SEO, 404 page, adding front matter comments

--- a/_includes/blocks/filterable-grid.html
+++ b/_includes/blocks/filterable-grid.html
@@ -30,4 +30,26 @@
   }
 </style>
 
+{% comment %}
 
+<!-- FRONT MATTER REFERENCE -->
+- id: filterable-grid
+  filter-buttons:
+    - button-text: Landscape
+    - button-text: Portrait
+    - button-text: Animal
+  grid:
+    - image: https://picsum.photos/id/1025/600/400
+      alt:
+      filter: Landscape Animal
+      caption:
+    - image: https://picsum.photos/id/1024/600/400
+      alt:
+      filter: Portrait
+      caption:
+    - image: https://picsum.photos/id/1026/600/400
+      alt:
+      filter: Landscape 
+      caption:
+
+{% endcomment %}
