--- a/_includes/site-head.html
+++ b/_includes/site-head.html
@@ -1,9 +1,20 @@
 <head>
-  <!-- SEO  -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{page.title}}</title>
+  <!-- SEO meta-fields -->
+  <title>{{page.seo.title | default: site.data.seo.title }}</title>
+  <meta name="description" content="{{page.seo.description | default: site.data.seo.description}}">
+  <meta property="og:image" content="{{page.data.seo.image | default: site.data.seo.image}}"/>
+  
+  <meta name="google" content="nositelinkssearchbox">
+  {% if site.data.seo.google-site-verification %}
+    <meta name="google-site-verification" content="{{site.data.seo.google-site-verification}}">
+  {% endif %}
+  
+  
+  {% if page.seo.index == true %}
+    <meta name="robots" content="all">
+  {% else %}
+    <meta name="robots" content="none">
+  {% endif %}
 
   <!-- Alpine JS -->
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
