--- a/_includes/blocks/filterable-menu.html
+++ b/_includes/blocks/filterable-menu.html
@@ -42,3 +42,30 @@
 </style>
 
 
+{% comment %}
+
+<!-- FRONT MATTER REFERENCE -->
+- id: filterable-menu
+  filter-buttons:
+        - button-text: Pescatarian
+        - button-text: Vegetarian
+        - button-text: Vegan
+  grid:
+    - filter: Vegetarian Vegan Nuts
+      dish-name: Dish 1
+      price: $45
+      description: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio perspiciatis perferendis architecto eveniet.
+    - filter: Pescatarian
+      dish-name: Dish 2
+      price: $32
+      description: Animi praesentium a recusandae sit. Velit natus suscipit corrupti rem ea. Excepturi quaerat porro at libero maiores.
+    - filter: Vegetarian 
+      dish-name: Dish 3
+      price: $17
+      description: Optio perspiciatis perferendis architecto eveniet. Praesentium a recusandae sit. Velit natus suscipit.
+    - filter: Vegetarian 
+      dish-name: Dish 4
+      price: $36
+      description: Praesentium a recusandae sit. Velit natus suscipit corrupti rem ea. Excepturi quaerat porro at libero maiores.
+
+{% endcomment %}
