--- a/_includes/blocks/form.html
+++ b/_includes/blocks/form.html
@@ -45,3 +45,43 @@
     </form>
   </div>
 </section>
+
+
+
+{% comment %}
+
+<!-- FRONT MATTER REFERENCE -->
+- id: form
+  inputs:
+  - type: text
+    name: First name
+    label: First name
+    placeholder-text: John
+    width: half
+    required: true
+  - type: text
+    name: Last name
+    label: Last name
+    placeholder-text: Smith
+    width: half
+    required: true
+  - type: email
+    name: Email
+    label: Your Email
+    placeholder-text: yourname@gmail.com
+    width: full
+    required: true
+  - type: phone
+    name: Phone
+    label: Cell phone
+    placeholder-text: 612-555-5555
+    width: full
+    required: false
+  - type: textarea
+    name: Inquiry
+    label: Your message here
+    placeholder-text: Add placeholder text here...
+    width: full
+    required: true
+
+{% endcomment %}
