--- a/_includes/header/header-2.html
+++ b/_includes/header/header-2.html
@@ -17,7 +17,7 @@
         {% if link.sublinks %}
         <div class="absolute pt-2 top-8 left-0 bg-[var(--bg-color)] hidden group-hover:block z-20">
           {% for sublink in link.sublinks %}
-            <a href="{{sublink.url}}" class="px-2">{{sublink.text}}</a>
+            <a href="{{sublink.url}}" class="px-2 whitespace-pre block">{{sublink.text}}</a>
           {% endfor %}
         </div>
           </span>
