--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,9 @@ video {
 .top-8 {
     top: 2rem;
 }
+.left-2 {
+    left: 0.5rem;
+}
 .z-10 {
     z-index: 10;
 }
@@ -542,6 +545,9 @@ video {
 }
 .overflow-hidden {
     overflow: hidden;
+}
+.whitespace-pre {
+    white-space: pre;
 }
 .border {
     border-width: 1px;
