--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,49 +449,33 @@ video {
 .inset-0 {
     inset: 0px;
 }
+.left-0 {
+    left: 0px;
+}
 .right-0 {
     right: 0px;
 }
 .top-0 {
     top: 0px;
 }
-.top-\[-1\.4px\] {
-    top: -1.4px;
-}
-.left-0 {
-    left: 0px;
-}
-.top-4 {
-    top: 1rem;
-}
-.top-6 {
-    top: 1.5rem;
-}
-.top-10 {
-    top: 2.5rem;
-}
-.top-14 {
-    top: 3.5rem;
-}
 .top-8 {
     top: 2rem;
 }
-.left-2 {
-    left: 0.5rem;
-}
-.z-10 {
-    z-index: 10;
+.top-\[-1\.4px\] {
+    top: -1.4px;
 }
 .z-20 {
     z-index: 20;
 }
+.col-span-4 {
+    grid-column: span 4 / span 4;
+}
+.col-span-6 {
+    grid-column: span 6 / span 6;
+}
 .mx-auto {
     margin-left: auto;
     margin-right: auto;
-}
-.my-2 {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
 }
 .my-4 {
     margin-top: 1rem;
@@ -521,6 +505,9 @@ video {
 .w-full {
     width: 100%;
 }
+.max-w-\[16rem\] {
+    max-width: 16rem;
+}
 .flex-shrink {
     flex-shrink: 1;
 }
@@ -537,6 +524,9 @@ video {
 .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+}
 .justify-between {
     justify-content: space-between;
 }
@@ -545,6 +535,13 @@ video {
 }
 .gap-4 {
     gap: 1rem;
+}
+.gap-x-32 {
+    -moz-column-gap: 8rem;
+         column-gap: 8rem;
+}
+.gap-y-10 {
+    row-gap: 2.5rem;
 }
 .overflow-hidden {
     overflow: hidden;
@@ -568,9 +565,6 @@ video {
     --tw-border-opacity: 1;
     border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
-.bg-\[var\(--featured-color\)\] {
-    background-color: var(--featured-color);
-}
 .bg-\[var\(--bg-color\)\] {
     background-color: var(--bg-color);
 }
@@ -578,51 +572,70 @@ video {
     -o-object-fit: cover;
        object-fit: cover;
 }
-.p-5 {
-    padding: 1.25rem;
+.p-2 {
+    padding: 0.5rem;
 }
 .p-4 {
     padding: 1rem;
 }
-.p-2 {
-    padding: 0.5rem;
+.p-5 {
+    padding: 1.25rem;
 }
 .px-0 {
     padding-left: 0px;
     padding-right: 0px;
 }
-.px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-}
 .px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
 }
+.px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+}
+.px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
 .pb-5 {
     padding-bottom: 1.25rem;
-}
-.pt-4 {
-    padding-top: 1rem;
 }
 .pt-2 {
     padding-top: 0.5rem;
 }
+.text-center {
+    text-align: center;
+}
+.font-semibold {
+    font-weight: 600;
+}
+.font-thin {
+    font-weight: 100;
+}
+.italic {
+    font-style: italic;
+}
 .leading-none {
     line-height: 1;
 }
+.leading-7 {
+    line-height: 1.75rem;
+}
+.leading-8 {
+    line-height: 2rem;
+}
 .filter {
     filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.transition-all {
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms;
 }
 .transition {
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
     transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+}
+.transition-all {
+    transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms;
 }
@@ -670,12 +683,14 @@ input:focus, textarea:focus {
     background-color: var(--featured-color);
 }
 
-.hover\:block:hover {
+.group:hover .group-hover\:block {
     display: block;
 }
 
-.group:hover .group-hover\:block {
-    display: block;
+@media (min-width: 640px) {
+    .sm\:col-span-2 {
+        grid-column: span 2 / span 2;
+    }
 }
 
 @media (min-width: 768px) {
@@ -688,7 +703,22 @@ input:focus, textarea:focus {
     .md\:col-span-6 {
         grid-column: span 6 / span 6;
     }
+    .md\:min-w-full {
+        min-width: 100%;
+    }
     .md\:grid-cols-6 {
         grid-template-columns: repeat(6, minmax(0, 1fr));
+    }
+    .md\:gap-10 {
+        gap: 2.5rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .lg\:col-span-1 {
+        grid-column: span 1 / span 1;
+    }
+    .lg\:gap-8 {
+        gap: 2rem;
     }
 }
