--- a/_includes/footer/footer-2.html
+++ b/_includes/footer/footer-2.html
@@ -12,41 +12,24 @@
       </div>
       <!-- Navigation Links -->
       <nav class="p-4 grid grid-cols-4 col-span-4 justify-between gap-x-32 gap-y-10 md:gap-10 lg:gap-8">
-        <!-- Group 1 -->
+        <!-- Link Group Loop -->
+        {% for menu in site.data.navigation.footer-links %}
         <div class="col-span-4 sm:col-span-2 lg:col-span-1">
-          <p class="font-semibold leading-8">What We Do</p>
-          <a href="#" class="font-thin block leading-7">Program 1</a>
-          <a href="#" class="font-thin block leading-7">Another Program</a>
-          <a href="#" class="font-thin block leading-7">Adult & Family Programs</a>
-          <a href="#" class="font-thin block leading-7">Group Programs</a>
+          <p class="font-semibold leading-8">{{menu.heading}}</p>
+          {% for link in menu.links %}
+          <a href="{{link.url}}" class="font-thin block leading-7">{{link.text}}</a>
+          {% endfor %}
         </div>
+        {% endfor %}
   
-        <!-- Group 2 -->
-        <div class="col-span-4 sm:col-span-2 lg:col-span-1">
-          <p class="font-semibold leading-8">About Us</p>
-          <a href="#" class="font-thin block leading-8">Mission & Vision</a>
-          <a href="#" class="font-thin block leading-7">History</a>
-          <a href="#" class="font-thin block leading-7">Our People</a>
-          <a href="#" class="font-thin block leading-7">Financial Transparency</a>
-          <a href="/privacy-policy.html" class="font-thin block leading-7">Privacy Policy</a>
-        </div>
-  
-        <!-- Group 3 -->
-        <div class="col-span-4 sm:col-span-2 lg:col-span-1">
-          <p class="font-semibold leading-8">Get Involved</p>
-          <a href="#" class="font-thin block leading-7">Volunteer Opportunities</a>
-          <a href="#" class="font-thin block leading-7">Become a Partner</a>
-          <a href="#" class="font-thin block leading-7">Employment Opportunities</a>
-          <a href="#" class="font-thin block leading-7">Contact Us</a>
-        </div>
-  
-        <!-- Group 4 (Address) -->
+        <!-- Address -->
         <div class="col-span-4 sm:col-span-2 lg:col-span-1">
           <p class="font-semibold leading-8">Company Name</p>
-          <a href="#" target="_blank" class="font-thin block leading-7">1111 Centre Pointe Drive, Suite 10 <br> City, Country </a>
-          <a href= “tel:+1-612-627-9000” class="font-thin block leading-7">(612) 555-5555 </a>
+          <a href="{{link.url}}" target="_blank" class="font-thin block leading-7">1111 Centre Pointe Drive, Suite 10 <br> City, Country </a>
+          <a href= “tel:+1-612-555-5555” class="font-thin block leading-7">(612) 555-5555 </a>
         </div>
       </nav>
+
       <!-- Copyright -->
       <div class="p-4 col-span-6 text-center italic">
         <p class="font-thin">Copyright© 2025 Company name™. All rights reserved.</p>
