--- a/_includes/footer/footer-2.html
+++ b/_includes/footer/footer-2.html
@@ -24,9 +24,9 @@
   
         <!-- Address -->
         <div class="col-span-4 sm:col-span-2 lg:col-span-1">
-          <p class="font-semibold leading-8">Company Name</p>
-          <a href="{{link.url}}" target="_blank" class="font-thin block leading-7">1111 Centre Pointe Drive, Suite 10 <br> City, Country </a>
-          <a href= “tel:+1-612-555-5555” class="font-thin block leading-7">(612) 555-5555 </a>
+          <p class="font-semibold leading-8">{{site.data.navigation.footer-contact.heading}}</p>
+          <a href="{{link.url}}" target="_blank" class="font-thin block leading-7">{{site.data.navigation.footer-contact.map-text-1}}<br> {{site.data.navigation.footer-contact.map-text-2}} </a>
+          <a href= “tel:{{site.data.navigation.footer-contact.phone-number}}” class="font-thin block leading-7">{{site.data.navigation.footer-contact.phone-text}} </a>
         </div>
       </nav>
 
