--- a/_includes/blocks/form.html
+++ b/_includes/blocks/form.html
@@ -29,7 +29,30 @@
               <input type="email" name="{{input.name}}" id="{{input.name}}" placeholder="{{input.placeholder-text}}"  {% if input.required %} required {% endif %}>
               
               {% when 'phone' %}
-              <input type="tel" name="{{input.name}}" id="{{input.name}}" placeholder="{{input.placeholder-text}}"  {% if input.required %} required {% endif %}>
+              <input class="font-normal text-featured rounded-2xl block w-full px-4 py-2 outline-none focus:bg-[var(--featured-color-v-light-blue)]"  type="tel" name="{{input.name}}" id="{{input.name}}" placeholder="{{input.placeholder-text}}"  {% if input.required %} required {% endif %}>
+                <!-- SMS Consent -->
+                <div>
+                  <input class="inline" type="checkbox" name="sms-consent" id="sms-consent" />
+                  <label class="inline featured-text text-sm/6 font-light" for="_replyto"> I consent to receive SMS on this number. </label>
+                </div>
+
+              {% when 'checkbox' %}
+              <div class="">
+                {% for box in input.boxes %}
+                  <label class="block font-normal text-lg" for="{{box.checkbox-option}}">
+                    <input class="font-normal text-featured rounded-2xl px-4 py-2 outline-none focus:bg-[var(--featured-color-v-light-blue)]"  type="checkbox" name="{{box.checkbox-option}}" id="{{box.checkbox-option}}"> {{box.checkbox-option}}
+                  </label>
+                {% endfor %}
+              </div>
+
+              {% when 'radio' %}
+              <div class="">
+                {% for box in input.boxes %}
+                  <label class="block font-normal text-lg" for="{{box.checkbox-option}}">
+                    <input class="font-normal text-featured rounded-2xl px-4 py-2 outline-none focus:bg-[var(--featured-color-v-light-blue)]"  type="radio" name="{{input.name}}" id="{{box.checkbox-option}}"> {{box.checkbox-option}}
+                  </label>
+                {% endfor %}
+              </div>
               
               {% when 'textarea' %}
               <textarea name="{{input.name}}" id="{{input.name}}" placeholder="{{input.placeholder-text}}"  {% if input.required %} required {% endif %}></textarea>
@@ -82,6 +105,17 @@
     placeholder-text: 612-555-5555
     width: full
     required: false
+  - form-type: checkbox
+    label: >-
+      I would be interested in volunteering for the following (check all
+      that apply):
+    width: full
+    boxes:
+      - checkbox-option: Angel Pack™ Packing Party
+      - checkbox-option: Special Events
+      - checkbox-option: Certified Financial Planner® for Financial Cancer Care
+      - checkbox-option: Making Memories
+      - checkbox-option: Internship
   - type: textarea
     name: Inquiry
     label: Your message here
